test/test_arg_out_of_scope/test_arg_out_of_scope.out
--> test/test_arg_out_of_scope/test_arg_out_of_scope.mvs:4:1
error: Variable "a" was not initialized.
