test/test_arg_out_of_scope/test_arg_out_of_scope.mvs
func f(a: int) {
	a += 1;
}
a -= 1;
